# mock-telescope

./: .gitignore  AGENT.md  CHIME.md  Dockerfile  pyproject.toml  simulate.py
.github/workflows/: ci.yml
chime/: __init__.py  l1.py  l2.py  l4.py  post_detection.py
tests/: conftest.py  test_chime.py
