[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-telescope-chime"
version = "0.1.0"
description = "CHIME mock telescope — reference implementation for HelixObs"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "helixobs>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 10
